add statistic and compilation